# ChatRoom

./: .gitignore  README.md
ChatRoom-Client/: CMakeLists.txt  main.cpp  readme.md
ChatRoom-Client/_backup/: client_utils.cpp  logindialog.cpp
ChatRoom-Client/include/: client_utils.h  login.h  logindialog.h  mainwindow.h  server_utils.h
ChatRoom-Client/modules/chatroom/include/: chatroom.h
ChatRoom-Client/modules/chatroom/src/: chatroom.cpp  chattextedit.cpp
ChatRoom-Client/modules/game_controller/include/: game_controller.h  operation_type.h
ChatRoom-Client/modules/game_controller/src/: game_controller.cpp
ChatRoom-Client/modules/game_core/include/: candidate_words.h  game_core.h
ChatRoom-Client/modules/game_core/src/: game_core.cpp
ChatRoom-Client/modules/game_screen/include/: card_color.h  code_card.h  game_screen.h
ChatRoom-Client/modules/game_screen/src/: code_card.cpp  game_screen.cpp
ChatRoom-Client/modules/game_screen/ui/: game_screen.ui
ChatRoom-Client/modules/mainwindow/include/: mainwindow.h
ChatRoom-Client/modules/mainwindow/src/: mainwindow.cpp
ChatRoom-Client/modules/mainwindow/ui/: mainwindow.ui
ChatRoom-Client/modules/network_data_manager/include/: client_utils.h  message_data.h  network_data_manager.h  user.h
ChatRoom-Client/modules/network_data_manager/src/: client_utils.cpp  message_processer.cpp  network_data_manager.cpp
ChatRoom-Client/modules/network_data_manager_server/include/: network_data_manager.h
ChatRoom-Client/modules/server_utils/src/: server_utils.cpp
ChatRoom-Client/resources/: darktheme.qss  resources.qrc
ChatRoom-Client/src/: client_utils.cpp  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.ui
ChatRoom-Server/: CMakeLists.txt  main.cpp  readme.md
ChatRoom-Server/include/: mainwindow.h  server_utils.h
ChatRoom-Server/modules/chatroom/include/: chatroom.h  chattextedit.h
ChatRoom-Server/modules/chatroom/src/: chatroom.cpp
ChatRoom-Server/modules/chatroom/ui/: chatroom.ui
ChatRoom-Server/modules/game_controller/include/: game_controller.h  game_message.h
ChatRoom-Server/modules/game_controller/src/: game_controller.cpp
ChatRoom-Server/modules/game_core/include/: card_color.h  game_core.h
ChatRoom-Server/modules/game_core/src/: game_core.cpp
ChatRoom-Server/modules/game_screen/include/: code_card.h  game_screen.h
ChatRoom-Server/modules/game_screen/src/: code_card.cpp  game_screen.cpp
ChatRoom-Server/modules/game_screen/ui/: game_screen.ui
ChatRoom-Server/modules/mainwindow/include/: mainwindow.h
ChatRoom-Server/modules/mainwindow/src/: mainwindow.cpp
ChatRoom-Server/modules/mainwindow/ui/: mainwindow.ui
ChatRoom-Server/modules/network_data_manager/include/: message.h  message_processer.h
ChatRoom-Server/modules/network_data_manager/src/: network_data_manager.cpp
ChatRoom-Server/modules/server_utils/include/: server_utils.h
ChatRoom-Server/modules/server_utils/src/: server_utils.cpp
ChatRoom-Server/resources/: _darktheme.qss  darktheme.qss  resources.qrc
ChatRoom-Server/src/: main.cpp  mainwindow.cpp  mainwindow.ui  server_utils.cpp
